# saga

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt
tests/conformance/: BUGS.md  CMakeLists.txt  README.md  SPEC_FIXES.md  run_test.sh
tests/conformance/array_map_access/: CMakeLists.txt  array_at_returns_T_directly.sg  array_index_hit.sg  array_or_shorthand_zero.sg  map_index_hit.sg  map_index_miss_default.sg
tests/conformance/assignment/: CMakeLists.txt  compound_ops.sg  increment_decrement.sg
tests/conformance/binary_operators/: CMakeLists.txt  arithmetic.golden  arithmetic.sg  bitwise.golden  bitwise.sg  comparison.sg  division_by_zero_via_or.sg  logical_and_or.sg
tests/conformance/closures/: CMakeLists.txt  anonymous_no_capture.sg  closure_captures_local.sg
tests/conformance/concurrency/: CMakeLists.txt  spawn_basic.golden  spawn_basic.sg
tests/conformance/conditionals/: CMakeLists.txt  if_ternary.sg  non_exhaustive_type_switch_rejected.sg  switch_multi_value_case.sg  type_matching_switch.sg  type_narrowing_if.sg
tests/conformance/constants/: CMakeLists.txt  compile_time_expr.sg  mutate_global_array.sg  named_import.golden  named_import.sg  type_alias.sg  value_const.sg
tests/conformance/enums/: CMakeLists.txt  basic_enum_decl_and_use.sg  comma_separated_variants_rejected.error  comma_separated_variants_rejected.sg  unknown_variant_rejected.sg
tests/conformance/expression_statements/: CMakeLists.txt  fn_as_expression.sg  for_as_expression.sg  if_as_expression.sg  import_as_expression.golden  import_as_expression.sg  switch_as_expression.sg
tests/conformance/getting_started/: CMakeLists.txt  hello_world.sg
tests/conformance/identifiers/: CMakeLists.txt  digit_start.sg  ignored_var_cannot_read.error  ignored_var_cannot_read.sg  lowercase_start.sg  mixed_chars.sg  question_mark_suffix.sg  underscore_start.sg  uppercase_start.sg
tests/conformance/import/: CMakeLists.txt  duplicate_import_alternate_name_rejected.sg  duplicate_import_rejected.sg  last_segment_binds_name.golden  last_segment_binds_name.sg
tests/conformance/initialisation/: CMakeLists.txt  array_const_populated_before_main.sg  backward_const_read.sg  forward_const_read_returns_zero.sg  forward_const_ref_rejected.sg  map_const_populated_before_main.sg
tests/conformance/interfaces/: CMakeLists.txt  basic_satisfaction.sg  comma_separated_methods_rejected.error  comma_separated_methods_rejected.sg  missing_method_rejected.sg  subset_assignable.sg  union_widens_to_all_methods.sg
tests/conformance/looping/: CMakeLists.txt  break_with_value.sg  c_style_index_iterator.sg  conditional_for.sg  for_array_index_value.golden  for_array_index_value.sg  next_skips_iteration.sg
tests/conformance/method_calling/: CMakeLists.txt  no_args.sg  with_args.sg
tests/conformance/methods/: CMakeLists.txt  basic_function.sg  concat_param_types.golden  concat_param_types.sg  explicit_return.golden  explicit_return.sg  multiple_return_values.sg  variadic_call.sg  variadic_mixed_rejected.sg  variadic_with_array.sg  void_return_omits_value.sg
tests/conformance/mutability/: CMakeLists.txt  const_immutable.sg  inner_sees_outer.sg  outer_cannot_see_inner.sg  shadow_outer_scope.sg  value_semantics_function.sg
tests/conformance/packages_modules/: README.md
tests/conformance/range/: CMakeLists.txt  range_in_for_loop.sg  range_to_array.sg
tests/conformance/selectors/: CMakeLists.txt  field_on_struct_literal.sg  package_member.sg
tests/conformance/string_interpolation/: CMakeLists.txt  escaped_brace.golden  escaped_brace.sg  int_interpolation.sg  multiple_expressions.sg  string_interpolation.sg
tests/conformance/strings/: CMakeLists.txt  escape_sequences.golden  escape_sequences.sg  string_index.sg  string_slice_full_copy.sg  string_slice_inclusive_exclusive.sg  string_slice_open_left.sg  string_slice_open_right.sg
tests/conformance/structs/: CMakeLists.txt  basic_decl_literal_field_access.sg  comma_separated_fields_rejected.error  comma_separated_fields_rejected.sg  embedding_inherits_method.sg  inbound_method_field_in_scope.sg  optional_field_with_or.sg  outbound_method.sg
tests/conformance/type_aliases/: CMakeLists.txt  alias_distinct_from_underlying.sg  alias_extension_method.sg  alias_inherits_methods.sg
tests/conformance/type_literals/: CMakeLists.txt  array_typed_with_initializer.sg  array_typed_zero_value.sg  empty_array_no_type_rejected.sg  int_binary_literal.sg  int_hex_literal.sg  int_octal_literal.sg  nested_map_with_type_prefix.sg  scalar_zero_values.golden  scalar_zero_values.sg
tests/conformance/types/: CMakeLists.txt  array_map_not_reserved_words.sg  conversion_via_method.sg  fat_type_array_size.sg  intrinsic_scalars_declarable.golden  intrinsic_scalars_declarable.sg  numeric_width_variants.sg  or_clause_capture_error.golden  or_clause_capture_error.sg  or_clause_default_value.sg  pure_union_holds_either.sg
tests/conformance/unary_operators/: CMakeLists.txt  logical_not.sg  not_on_non_bool_rejected.sg  numeric_negation.sg
tests/conformance/variable_declarations/: CMakeLists.txt  explicit_type_with_value.sg  explicit_type_zero.sg  inferred.sg  shadow_same_scope.error  shadow_same_scope.sg  use_before_declare.error  use_before_declare.sg
tests/conformance/visibility/: CMakeLists.txt  README.md  private_readable_within_file.sg  pub_keyword_accepted.sg
tests/frontend/: test_error_list.cpp  test_file.cpp  test_fileset.cpp  test_lexer.cpp  test_parser.cpp  test_position.cpp
tests/ir/: test_codegen.cpp  test_monomorph.cpp
tests/pkg/: test_manifest.cpp
tests/runtime/: arena_test.cpp  channel_test.cpp  cow_test.cpp  executor_test.cpp  intrinsics_test.cpp  quota_test.cpp  runtime_test_types.h  task_context_test.cpp
tests/runtime/cross_package/: CMakeLists.txt  README.md  run_error_test.sh  run_test.sh
tests/semantic/: sgi_roundtrip_test.cpp  test_analyzer.cpp  test_builtins.cpp  test_generics.cpp  test_modules.cpp  test_protocol_diagnostics.cpp  test_scope.cpp  test_sgi.cpp  test_type_checking.cpp  test_types.cpp
tests/util/: test_json.cpp
(+184 files in other folders)
